--- a/Unit9_project/css/style.css
+++ b/Unit9_project/css/style.css
@@ -8,10 +8,18 @@ button, input, select, textarea {
   font-size: 100%;
   font-size: .9em;
 }
-input:focus, textarea:focus {
-  background: rgba(0,0,0,.1);
-  border-radius: 5px;
+input[type=text], textarea {
+  -webkit-transition: all 0.30s ease-in-out;
+  -moz-transition: all 0.30s ease-in-out;
+  -ms-transition: all 0.30s ease-in-out;
+  -o-transition: all 0.30s ease-in-out;
   outline: none;
+  border: 1px solid #DDDDDD;
+}
+ 
+input[type=text]:focus, textarea:focus {
+  box-shadow: 0 0 6px rgba(96, 142, 229, .8);
+  border: 1px solid #608ee5;
 }
 body {
 	background-color: #f5f5f5;
@@ -58,7 +66,7 @@ header img {
 	width: 100%;
 	display: block;
 }
-button {
+button.confirm_bttn {
 	color: #f5f5f5;
 	padding: 5px 10px;
 	border: 1px solid #21309f;
