--- a/Unit9_project/css/style.css
+++ b/Unit9_project/css/style.css
@@ -201,5 +201,12 @@ p.attribution {
 	text-align: center;
 	font-size: .9em;
 	font-style: italic;
-}   
+}  
+.error {
+	border: 1px solid red;
+} 
+#message {
+	font-size: .8em;
+	color:red;
+}
 
